--- a/index.html
+++ b/index.html
@@ -1,12 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokechu</title>
     <link rel="icon" href="img/pokebola.png">
+    <link rel="stylesheet" href="font/pokemon-solid-font/PokemonSolidNormal-xyWR.ttf">
+    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
 </head>
+
 <body>
-    
+    <Section id="apresentacao">
+        <div class="apresentacao_animate">
+            <div>
+                <h1>Poke</h1><span>chu</span>
+            </div>
+        </div>
+        <div class="apresentacao_inicial">
+            <div class="apresentacao_inicial_container">
+                <div class="swiper">
+
+                    <div class="swiper-slide">
+                        <div class="primeira_apresentacao">
+                            <div class="apresentacao_inicial_imagem">
+                                <img src="img/apresentacao/image 134.svg" alt="">
+                                <img src="img/apresentacao/image 135.svg" alt="">
+                            </div>
+                            <div class="apresentacao_inicial_text">
+                                <h2>Todos os Pokémons em um só Lugar</h2>
+                                <p>Acesse uma vasta lista de Pokémon de todas as gerações já feitas pela Nintendo</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                        <div class="segunda_apresentacao">
+                            <div class="apresentacao_inicial_imagem">
+                                <img src="img/apresentacao/sprite_hilda 1.svg" alt="">
+                            </div>
+                            <div class="apresentacao_inicial_text">
+                                <h2>Mantenha sua Pokédex atualizada</h2>
+                                <p>Cadastre-se e mantenha seu perfil,
+                                    pokémon favoritos, configurações e muito mais, salvos no aplicativo, mesmo sem
+                                    conexão
+                                    com a
+                                    internet.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="swiper-pagination"></div>
+                </div>
+
+                <div class="button_pass">
+                    <button id="btnPass">Vamos começar!</button>
+                </div>
+
+            </div>
+    </Section>
+
+
+
+
+
+    <script src="js/jquery.js"></script>
+    <script src="js/apresentacao_animate.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="js/apresentacaoSwiper.js"></script>
 </body>
+
 </html>
