Feat: troca de background para tipo eletrico

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                             </div>
                           
                         </div>
+                        <div class="swiper-pagination">
+    <div class="pagination-bullet"></div>
+  </div>
                     </div>
              
 
@@ -67,6 +70,12 @@
     </Section>
 
     <section id="pokemon_perfil">
+        <div class="background_pokemon_type">
+            <img src="img/type-background/grama-type.svg" alt="">
+        </div>
+        <div class="icon_pokemon_type">
+            <img src="img/type-background/grama-icon.svg" alt="">
+        </div>
         <div class="container">
             <div class="pokemon_sprite"><img src="img/pokemonPerfil/bulbasaur 1.svg" alt=""></div>
             <div class="pokemon_id">
@@ -79,6 +88,12 @@
                 </form>
             </div>
             <div class="pokemon_type">
+                <div class="block_description_text">
+                    <img src="img/type-description-icons/grama_icon.svg" class="icon_type">
+                    <p class="name_type">Grama</p>
+                </div>  
+            </div>
+            <div class="description_pokemon_text">
                 <p>Suicune encarna a compaixão de uma fonte de água pura. Ele atravessa a terra com graciosidade.</p>
             </div>
 
