Feat: correção de erro e adição de botões

--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
                 <form class="form">
                     <input type="search" class="search" placeholder="Name or Number" required>
                 </form>
+                <div class="buttons_teste">
+                    <button class="button_teste btn-prev">Prev &lt;</button>
+                    <button class="button_teste btn-next">Prev &gt;</button>
+                </div>
             </div>
             <div class="pokemon_type">
                 <div class="block_description_text">
@@ -101,11 +105,11 @@
                 <div class="pokemon_peso">
                     <p class="description_info">
                         <img src="img/icons/peso-icon.svg" alt=""> peso</p>
-                    <div class="block_pokemon_info peso">6.9kg</div>
+                    <div class="block_pokemon_info peso"><p>6.9</p>kg</div>
                 </div>
                 <div class="pokemon_altura">
                     <p class="description_info"><img src="img/icons/altura-icon.svg" alt=""> altura</p>
-                    <div class="block_pokemon_info altura">0,7m</div>
+                    <div class="block_pokemon_info altura"><p>0.7</p>m</div>
 
                 </div>
                 <div class="pokemon_categoria">
